fix margins on mobile

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -390,7 +390,7 @@ textarea {
   order to how your rendered layout will appear.
 ==============================================================================*/
 .grid__item{
-  margin-bottom: 30px;
+  margin-top: 20px;
 }
 
 .grid--rev {
@@ -1101,7 +1101,12 @@ textarea {
 
 .main-content {
   display: block;
-  padding-top: 110px;
+}
+
+@media only screen and (min-width: 750px){
+  .main-content {
+    padding-top: 110px;
+  }
 }
 
 .section-header {
@@ -2153,8 +2158,6 @@ hr {
 .grid--flush-bottom {
   margin-bottom: -55px;
   overflow: auto; }
-  .grid--flush-bottom > .grid__item {
-    margin-bottom: 12px; }
 
 @-webkit-keyframes spin {
   0% {
@@ -2476,6 +2479,9 @@ hr {
   @media only screen and (min-width: 750px) {
     .index-section {
       padding-bottom: 55px; } }
+  @media only screen and (max-width: 750px) {
+    .index-section {
+      margin-top: 20px; } }
   .index-section:first-child {
     padding-top: 0;
     border-top: 0; }
@@ -5761,7 +5767,6 @@ hr {
       max-width: 100%; } }
 
 .feature-row__image-wrapper {
-  margin: 0 auto 19.44444px;
   position: relative;
   width: 100%; }
 
